// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subtitle component tests base = false, color = default 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#2b2e33",
      },
      false,
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;

exports[`Subtitle component tests base = false, color = primary 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#44e858",
      },
      false,
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;

exports[`Subtitle component tests base = false, color = secondary 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#85888e",
      },
      false,
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;

exports[`Subtitle component tests base = false, color = undefined 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#2b2e33",
      },
      false,
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;

exports[`Subtitle component tests base = true, color = default 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#2b2e33",
      },
      {
        "fontSize": 14,
        "lineHeight": 18,
      },
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;

exports[`Subtitle component tests base = true, color = primary 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#44e858",
      },
      {
        "fontSize": 14,
        "lineHeight": 18,
      },
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;

exports[`Subtitle component tests base = true, color = secondary 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#85888e",
      },
      {
        "fontSize": 14,
        "lineHeight": 18,
      },
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;

exports[`Subtitle component tests base = true, color = undefined 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#2b2e33",
      },
      {
        "fontSize": 14,
        "lineHeight": 18,
      },
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;

exports[`Subtitle component tests base = undefined, color = default 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#2b2e33",
      },
      false,
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;

exports[`Subtitle component tests base = undefined, color = primary 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#44e858",
      },
      false,
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;

exports[`Subtitle component tests base = undefined, color = secondary 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#85888e",
      },
      false,
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;

exports[`Subtitle component tests base = undefined, color = undefined 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12,
        "fontWeight": 700,
        "lineHeight": 15,
        "textTransform": "uppercase",
      },
      {
        "color": "#2b2e33",
      },
      false,
      {
        "margin": 10,
      },
    ]
  }
  testID="Subtitle"
>
  Text
</Text>
`;
